<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="course_date_placeholder">22 Мая 2024</string>
    <string name="course_description_placeholder">Освойте backend-разработку и программирование на Java, фреймворки Spring и Maven, работу с базами данных и API. Создайте свой собственный проект, собрав портфолио и став востребованным специалистом для любой IT компании.</string>
    <string name="course_details">Подробнее</string>
    <string name="course_price_placeholder">999 ₽</string>
    <string name="course_rating_placeholder">4.9</string>
    <string name="course_title_placeholder">Java-разработчик с нуля</string>
    <string name="original_format">Исходный формат</string>
    <string name="price_text">%1$s ₽</string>
    <string name="search_hint">Search courses...</string>
    <string name="sort_by_date">По дате добавления</string>
    <string name="sort_by_date_desc">По дате добавления</string>
</resources>
