<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_8"
    app:cardBackgroundColor="@color/color_dark_gray"
    android:foreground="@null"
    app:cardCornerRadius="@dimen/spacing_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/courseImageCardView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="@dimen/spacing_16"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/color_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_12"
            android:layout_marginBottom="@dimen/spacing_12"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/courseImageCardView"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_oval_glass"
                android:paddingHorizontal="@dimen/spacing_8"
                android:paddingVertical="@dimen/spacing_4">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/color_green"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/ratingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_4"
                    android:text="@string/course_rating_placeholder"
                    android:textColor="@color/color_white"
                    style="@style/TextCaption" />
            </LinearLayout>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                android:background="@drawable/bg_oval_glass"
                android:paddingHorizontal="@dimen/spacing_8"
                android:paddingVertical="@dimen/spacing_4"
                android:text="@string/course_date_placeholder"
                android:textColor="@color/color_white"
                style="@style/TextCaption" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="@dimen/spacing_12"
            android:layout_marginTop="@dimen/spacing_12"
            android:background="@drawable/bg_circle_glass"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/courseImageCardView"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_16"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/courseImageCardView">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_title_placeholder"
                android:textColor="@color/color_white"
                style="@style/TextTitleMedium" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/course_description_placeholder"
                android:textColor="@color/color_gray"
                style="@style/TextBodySmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_price_placeholder"
                    android:textColor="@color/color_white"
                    android:textSize="16sp"
                    android:lineHeight="18sp"
                    style="@style/TextTitleMedium" />

                <TextView
                    android:id="@+id/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_details"
                    android:textColor="@color/color_green"
                    style="@style/TextButtonSmall" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_arrow_right_short_fill"
                    android:layout_marginStart="@dimen/spacing_4"
                    app:tint="@color/color_green"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
